--- a/API-search-wisata-using-flask/.env
+++ b/API-search-wisata-using-flask/.env
@@ -1,7 +1,8 @@
-FLASK_APP = server.py
-FLASK_ENV = development
+FLASK_APP : server.py
+FLASK_ENV : development
 
-DB_HOST = 34.101.223.194
-DB_DATABASE = getloc_db
-DB_USERNAME = root
-DB_PASSWORD = @GetLoc2021
+DB_HOST : 34.101.223.194
+DB_DATABASE : getloc_db
+DB_USERNAME : root
+DB_PASSWORD : @GetLoc2021
+DB_CONNECTION_NAME : getloc-314510:asia-southeast2:getloc-db-instance
