--- a/API-search-wisata-using-flask/app.yaml
+++ b/API-search-wisata-using-flask/app.yaml
@@ -1,16 +1,19 @@
-
 runtime: python37
+entrypoint: gunicorn -b :$PORT main:app
+
+runtime_config:
+  python_version: 3
 
 env_variables:
   # CLOUD_SQL_USERNAME: YOUR-DB-USERNAME
   # CLOUD_SQL_PASSWORD: YOUR-DB-PASSWORD
   # CLOUD_SQL_DATABASE_NAME: YOUR-DB-NAME
   # CLOUD_SQL_CONNECTION_NAME: YOUR-CONN-NAME
-  FLASK_APP : server.py
-  FLASK_ENV : development
+  FLASK_APP: main.py
+  # FLASK_ENV : development
 
-  DB_HOST : 34.101.223.194
-  DB_DATABASE : getloc_db
-  DB_USERNAME : root
-  DB_PASSWORD : @GetLoc2021
-  DB_CONNECTION_NAME : getloc-314510:asia-southeast2:getloc-db-instance
+  DB_HOST: 34.101.223.194
+  DB_DATABASE: getloc_db
+  DB_USERNAME: root
+  DB_PASSWORD: getloc2021
+  DB_CONNECTION_NAME: getloc-314510:asia-southeast2:getloc-db-instance
