--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -22,8 +23,8 @@
         <activity android:name=".activity.RekomendasiActivity" />
         <activity android:name=".activity.PilihanActivity" />
         <activity android:name=".activity.ResetPasswordActivity" />
-        <activity android:name=".activity.RegisterActivity" />
-        <activity android:name=".activity.LoginActivity" />
+        <activity android:name=".ui.signup.RegisterActivity" />
+        <activity android:name=".ui.login.LoginActivity" />
         <activity android:name=".activity.onBoardingActivity" />
         <activity android:name=".activity.SplashScreenActivity">
             <intent-filter>
